#3014597 by DamienMcKenna: Document the advanced backup options.
#2382541 by sano, DamienMcKenna, couturier, dman, modulist: Updated
  instructions for installing the S3 library.
#3016278 by DamienMcKenna: Some debug messages aren't hidden behind
  backup_migrate_verbose.
#3016282 by DamienMcKenna: "Cannot add field
  backup_migrate_profiles.machine_name: field already exists" error.


Backup and Migrate 7.x-3.5, 2018-02-05
--------------------------------------
#2941981 by DamienMcKenna, Rick J, camhoward: Backup files being overwritten
  because of a change to the append_timestamp setting.
#2940451 by Darren Oh: Unlimited max_execution_time treated as 0 seconds.


Backup and Migrate 7.x-3.4, 2018-01-24
--------------------------------------
By DamienMcKenna, pere-orga, ikit-claw, cashwilliams: Make all permissions
  restricted.
#1058820 by kbasarab, sobi3ch, gbirch, avatxus: Add option to overwrite file.
#2498191 by DamienMcKenna: Unable to backup to NodeSquirrel using PHP 5.6.9
  (on Windows) due to changes in SSL validation rules.
#2742855 by hanoii: Caching profile objects led to unwanted behaviors because of
  stale data.
#2703351 by DamienMcKenna, ultrabob: Redundant methods in
  backup_migrate_location_remote.
#2728345 by Rick J: Nodesquirrel destination class doesn't return its name.
#2728331 by Rick J: Incorrect paging count in saved backup list.
#2498179 by junaidpv: Use drupal_mail() for system notifications.
#2920311 by DamienMcKenna: Check backup directory permissions / web
  accessibility.
#2912459 by DamienMcKenna: Add an initial test.
#2880434 by DamienMcKenna, benqwerty: Minor changes to drush help output.
#2914644 by DamienMcKenna, jacob.embree: List all files which contain classes in
  the info file so other modules can use the classes.
#2663928 by DamienMcKenna, fietserwin: public://languages should also be
  excluded by default.
#2388347 by DamienMcKenna: Nodequirrel destination class doesn't define $errno,