@@ -53,6 +53,8 @@ Backup and Migrate 7.x-3.x-dev, xxxx-xx-xx
   backup_migrate_verbose.
 #3016282 by DamienMcKenna: "Cannot add field
   backup_migrate_profiles.machine_name: field already exists" error.
+#3017042 by DamienMcKenna, freelylw, gisle: Settings form field dependency
+  broken.
 
 
 Backup and Migrate 7.x-3.5, 2018-02-05
